--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
     <!-- who I am -->
-    <section class="who fade-in-section ">
+    <section class="who  ">
         <h1 class="whotitle "  id="about">Who <span>I am ?</span></h1>
 
         <div class="container whocontent">
@@ -146,11 +146,11 @@
     
 
     <!-- skills -->
-    <section class="skills fade-in-section" id="skills">
+    <section class="skills " id="skills">
       <h1 class="skillstitle">My <span>Skills</span></h1>
       <div class="container">
-        <div class="row">
-          <div class="col-sm-4 skill">
+        <div class="row row-of-skills">
+          <div class="col-sm-6 skill">
             <h2><i class="fa-brands fa-html5"></i> HTML</h2>
           </div>
           <div class="col-sm-4 skill">
@@ -161,7 +161,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row row-of-skills">
           <div class="col-sm-4 skill">
             <h2><i class="fa-brands fa-bootstrap"></i> BootStrap</h2>
           </div>
@@ -173,7 +173,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row row-of-skills">
           <div class="col-sm-4 skill">
             <h2><i class="fa-brands fa-php"></i> PHP</h2>
           </div>
@@ -192,7 +192,7 @@
     <!-- ====================================================================================== -->
 
     <!-- projects -->
-    <section class="projects fade-in-section" id="projects">
+    <section class="projects " id="projects">
       <h1 class="projecttitle">My <span>Projects</span></h1>
 
       <div class="container">
@@ -262,7 +262,7 @@
     <!-- ====================================================================================== -->
 
     <!-- experience -->
-    <section class="experience fade-in-section" id="experience">
+    <section class="experience " id="experience">
       <h1 class="exp-title"><span>Internships </span>&<span> Experiences</span></h1>
 
       <div class="container">
@@ -360,7 +360,7 @@
     <!-- ====================================================================================== -->
 
     <!-- contacts -->
-    <section class="contacts fade-in-section" id="contact">
+    <section class="contacts " id="contact">
       <h1 class="contacts-title">Contacts</h1>
 
       <div class="container">
