--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     I always try to learn and increase my soft skills and technical skills 
                     to face the developments taking place in the labor market.
                   </p>
-                  <button class="cv"><a href="">Download CV</a></button>
+                  <a href="./imgs/Karim.Ali.pdf" class="cv">Download CV</a>
                 </div>
 
             </div>
