--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     I always try to learn and increase my soft skills and technical skills 
                     to face the developments taking place in the labor market.
                   </p>
-                  <a href="./imgs/Karim.Ali.pdf" class="cv">Download CV</a>
+                  <a href="./imgs/Karim.ALI.2024.pdf" class="cv">Download CV</a>
                 </div>
 
             </div>
@@ -174,7 +174,7 @@
             <h2><i class="fa-brands fa-react"></i> ReactJs</h2>
           </div>
           <div class="col-sm-4 skill">
-            <h2><i class="fa-solid fa-pencil"></i> UI/UX</h2>
+            <h2><i class="fa-brands fa-react"></i> React Native</h2>
           </div>
         </div>
 
@@ -186,7 +186,12 @@
             <h2><i class="fa-solid fa-database"></i> SQL</h2>
           </div>
           <div class="col-sm-4 skill">
-            <h2><i class="fa-solid fa-dollar-sign"></i> Freelancing</h2>
+            <h2><i class="fa-solid fa-pencil"></i> UI/UX</h2>
+          </div>
+        </div>
+        <div class="row row-of-skills">
+          <div class="col-sm-4 skill">
+            <h2><i class="fa-brands fa-github"></i> GitHub</h2>
           </div>
         </div>
 
