--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="collapse navbar-collapse links" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item item">
-              <a class="nav-link link" href="#about">AboutUs</a>
+              <a class="nav-link link" href="#about">AboutMe</a>
             </li>
             <li class="nav-item item">
               <a class="nav-link link" href="#skills">skills</a>
@@ -202,42 +202,58 @@
       <div class="container">
         <div class="row row-of-skills">
           <div class="col-sm-6 skill">
-            <h2><i class="fa-brands fa-html5"></i> HTML</h2>
+            <!-- <h2><i class="fa-brands fa-html5"></i> HTML</h2> -->
+            <img class="skillIcon" src="https://cdn-icons-png.flaticon.com/512/732/732212.png"/>
           </div>
           <div class="col-sm-4 skill">
-            <h2><i class="fa-brands fa-css3-alt"></i> CSS</h2>
+            <!-- <h2><i class="fa-brands fa-css3-alt"></i> CSS</h2> -->
+            <img class="skillIcon" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png"/>
           </div>
           <div class="col-sm-4 skill">
-            <h2><i class="fa-brands fa-js"></i> JS</h2>
-          </div>
-        </div>
-
-        <div class="row row-of-skills">
-          <div class="col-sm-4 skill">
-            <h2><i class="fa-brands fa-bootstrap"></i> BootStrap</h2>
-          </div>
-          <div class="col-sm-4 skill">
-            <h2><i class="fa-brands fa-react"></i> ReactJs</h2>
-          </div>
-          <div class="col-sm-4 skill">
-            <h2><i class="fa-brands fa-react"></i> React Native</h2>
+            <!-- <h2><i class="fa-brands fa-js"></i> JS</h2> -->
+            <img class="skillIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png"/>
           </div>
         </div>
 
         <div class="row row-of-skills">
           <div class="col-sm-4 skill">
-            <h2><i class="fa-brands fa-php"></i> PHP</h2>
+            <!-- <h2><i class="fa-brands fa-bootstrap"></i> BootStrap</h2> -->
+            <img class="skillIcon" src="https://cdn3d.iconscout.com/3d/free/thumb/free-bootstrap-framework-logo-6563486-5453031.png"/>
+
           </div>
           <div class="col-sm-4 skill">
-            <h2><i class="fa-solid fa-database"></i> SQL</h2>
+            <!-- <h2><i class="fa-brands fa-react"></i> ReactJs</h2> -->
+            <img class="skillIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/539px-React-icon.svg.png"/>
+
           </div>
           <div class="col-sm-4 skill">
-            <h2><i class="fa-solid fa-pencil"></i> UI/UX</h2>
+            <!-- <h2><i class="fa-brands fa-react"></i> React Native</h2> -->
+            <img class="skillIcon" src="https://static-00.iconduck.com/assets.00/sdk-react-native-icon-1024x980-7ch6m2rf.png"/>
+
+          </div>
+        </div>
+
+        <div class="row row-of-skills">
+          <div class="col-sm-4 skill">
+            <!-- <h2><i class="fa-brands fa-php"></i> PHP</h2> -->
+            <img class="skillIcon" src="https://static-00.iconduck.com/assets.00/php-icon-2048x2048-zjxns1zh.png"/>
+          </div>
+          <div class="col-sm-4 skill">
+            <!-- <h2><i class="fa-solid fa-database"></i> SQL</h2> -->
+            <img class="skillIcon" src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-1521x2048-d0vdpxpg.png"/>
+
+          </div>
+          <div class="col-sm-4 skill">
+            <!-- <h2><i class="fa-solid fa-pencil"></i> UI/UX</h2> -->
+            <img class="skillIcon" src="https://cdn-icons-png.flaticon.com/256/7858/7858975.png"/>
+
           </div>
         </div>
         <div class="row row-of-skills">
           <div class="col-sm-4 skill">
-            <h2><i class="fa-brands fa-github"></i> GitHub</h2>
+            <!-- <h2><i class="fa-brands fa-github"></i> GitHub</h2> -->
+            <img class="skillIcon" src="https://static-00.iconduck.com/assets.00/github-icon-2048x2048-eyd5tyuo.png"/>
+
           </div>
         </div>
       </div>
