--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               to learn and increase my soft skills and technical skills to face
               the developments taking place in the labor market.
             </p>
-            <a href="./imgs/Karim.ALI.2024.pdf" class="cv">Download CV</a>
+            <a href="./imgs/Karim.ALI.El-Sayed.pdf" class="cv">Download CV</a>
           </div>
         </div>
       </div>
