--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="col-sm-4 leftcontent">
             <h1><i class="fa-solid fa-circle-info"></i> My Info :</h1>
             <p>
-              My name is Karim Ali Al-Sayed, I am 21 years old, and I study in
+              My name is Karim Ali El-Sayed, I am 21 years old, and study in
               the Faculty of Computers and Artificial Intelligence, Information
               System Department, Level 4, at Helwan University.
             </p>
@@ -187,7 +187,7 @@
               to learn and increase my soft skills and technical skills to face
               the developments taking place in the labor market.
             </p>
-            <a href="./imgs/Karim.ALI.El-Sayed.pdf" class="cv">Download CV</a>
+            <a href="./imgs/Karim.ALI.EL-Sayed.pdf" class="cv">Download CV</a>
           </div>
         </div>
       </div>
