upload new CV and Graduation Project

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="col-sm-4 leftcontent">
             <h1><i class="fa-solid fa-circle-info"></i> My Info :</h1>
             <p>
-              My name is Karim Ali El-Sayed, I am 21 years old, and study in
+              My name is Karim Ali Al-Sayed, I am 21 years old, and I study in
               the Faculty of Computers and Artificial Intelligence, Information
               System Department, Level 4, at Helwan University.
             </p>
@@ -187,7 +187,7 @@
               to learn and increase my soft skills and technical skills to face
               the developments taking place in the labor market.
             </p>
-            <a href="./imgs/Karim.ALI.EL-Sayed.pdf" class="cv">Download CV</a>
+            <a href="./imgs/Karim.ALI.2024.pdf" class="cv">Download CV</a>
           </div>
         </div>
       </div>
@@ -203,57 +203,81 @@
         <div class="row row-of-skills">
           <div class="col-sm-6 skill">
             <!-- <h2><i class="fa-brands fa-html5"></i> HTML</h2> -->
-            <img class="skillIcon" src="https://cdn-icons-png.flaticon.com/512/732/732212.png"/>
+            <img
+              class="skillIcon"
+              src="https://cdn-icons-png.flaticon.com/512/732/732212.png"
+            />
           </div>
           <div class="col-sm-4 skill">
             <!-- <h2><i class="fa-brands fa-css3-alt"></i> CSS</h2> -->
-            <img class="skillIcon" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png"/>
+            <img
+              class="skillIcon"
+              src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png"
+            />
           </div>
           <div class="col-sm-4 skill">
             <!-- <h2><i class="fa-brands fa-js"></i> JS</h2> -->
-            <img class="skillIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png"/>
+            <img
+              class="skillIcon"
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png"
+            />
           </div>
         </div>
 
         <div class="row row-of-skills">
           <div class="col-sm-4 skill">
             <!-- <h2><i class="fa-brands fa-bootstrap"></i> BootStrap</h2> -->
-            <img class="skillIcon" src="https://cdn3d.iconscout.com/3d/free/thumb/free-bootstrap-framework-logo-6563486-5453031.png"/>
-
+            <img
+              class="skillIcon"
+              src="https://cdn3d.iconscout.com/3d/free/thumb/free-bootstrap-framework-logo-6563486-5453031.png"
+            />
           </div>
           <div class="col-sm-4 skill">
             <!-- <h2><i class="fa-brands fa-react"></i> ReactJs</h2> -->
-            <img class="skillIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/539px-React-icon.svg.png"/>
-
+            <img
+              class="skillIcon"
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/539px-React-icon.svg.png"
+            />
           </div>
           <div class="col-sm-4 skill">
             <!-- <h2><i class="fa-brands fa-react"></i> React Native</h2> -->
-            <img class="skillIcon" src="https://static-00.iconduck.com/assets.00/sdk-react-native-icon-1024x980-7ch6m2rf.png"/>
-
+            <img
+              class="skillIcon"
+              src="https://static-00.iconduck.com/assets.00/sdk-react-native-icon-1024x980-7ch6m2rf.png"
+            />
           </div>
         </div>
 
         <div class="row row-of-skills">
           <div class="col-sm-4 skill">
             <!-- <h2><i class="fa-brands fa-php"></i> PHP</h2> -->
-            <img class="skillIcon" src="https://static-00.iconduck.com/assets.00/php-icon-2048x2048-zjxns1zh.png"/>
+            <img
+              class="skillIcon"
+              src="https://static-00.iconduck.com/assets.00/php-icon-2048x2048-zjxns1zh.png"
+            />
           </div>
           <div class="col-sm-4 skill">
             <!-- <h2><i class="fa-solid fa-database"></i> SQL</h2> -->
-            <img class="skillIcon" src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-1521x2048-d0vdpxpg.png"/>
-
+            <img
+              class="skillIcon"
+              src="https://static-00.iconduck.com/assets.00/sql-database-generic-icon-1521x2048-d0vdpxpg.png"
+            />
           </div>
           <div class="col-sm-4 skill">
             <!-- <h2><i class="fa-solid fa-pencil"></i> UI/UX</h2> -->
-            <img class="skillIcon" src="https://cdn-icons-png.flaticon.com/256/7858/7858975.png"/>
-
+            <img
+              class="skillIcon"
+              src="https://cdn-icons-png.flaticon.com/256/7858/7858975.png"
+            />
           </div>
         </div>
         <div class="row row-of-skills">
           <div class="col-sm-4 skill">
             <!-- <h2><i class="fa-brands fa-github"></i> GitHub</h2> -->
-            <img class="skillIcon" src="https://static-00.iconduck.com/assets.00/github-icon-2048x2048-eyd5tyuo.png"/>
-
+            <img
+              class="skillIcon"
+              src="https://static-00.iconduck.com/assets.00/github-icon-2048x2048-eyd5tyuo.png"
+            />
           </div>
         </div>
       </div>
@@ -268,6 +292,44 @@
 
       <div class="container">
         <div class="row">
+          <div class="col-sm-4 project">
+            <img src="./imgs/app.jpg" alt="" />
+            <!-- collapse -->
+            <p>
+              <button
+                class="btn collapse-btn"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseWidthExampleAPP"
+                aria-expanded="false"
+                aria-controls="collapseWidthExample"
+              >
+                details
+              </button>
+            </p>
+            <div style="min-height: 120px">
+              <div
+                class="collapse collapse-horizontal"
+                id="collapseWidthExampleAPP"
+              >
+                <div class="card card-body collapse-content detailsParagraph">
+                  My graduation project involves creating a system where the
+                  user, who is the patient, enters their illness, the sector
+                  that matches their financial situation, and their current
+                  location. The system then displays the available hospitals
+                  that treat their condition, are close to them, and have
+                  available space. This way, the patient doesn't waste time
+                  going to a hospital that might not have space, doesn't treat
+                  their condition, or is far from them. To clarify further...
+                  <a href="https://www.linkedin.com/posts/karim-ali-elsayed_graduationabrproject-react-health-activity-7208797677667393536-ZxVC?utm_source=share&utm_medium=member_desktop"
+                    >Hompital</a
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- collapse -->
+          </div>
+          <!-- ******************************************** -->
           <div class="col-sm-4 project">
             <img src="./imgs/Dashboard.png" alt="" />
             <!-- collapse -->
